Bugfixes, corrected pin names, and small formatting changes

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,5 @@
-CROSS=/usr/local/oecore-x86_64/sysroots/x86_64-angstromsdk-linux/usr/bin/armv7a-vfp-neon-angstrom-linux-gnueabi/arm-angstrom-linux-gnueabi-
-
-
-CPPFLAGS=-I../include/  -D_HW_PLATFORM_BEAGLEBONE 
+DEBUG_LEVEL=3
+CPPFLAGS=-I../include/  -D_HW_PLATFORM_BEAGLEBONE #-DDEBUG_LEVEL=$(DEBUG_LEVEL)
 CXXFLAGS=-O0 -g -pedantic -Wall -std=gnu++11
 CFLAGS=-pedantic -Wall 
 CXX=${CROSS}g++ 
