--- a/dts/tlc5946-00A0.dts
+++ b/dts/tlc5946-00A0.dts
@@ -8,6 +8,9 @@
     	part-number = "tlc5946_gpio_pins";
 	version = "00A0";
 
+	/******************************************/
+	/* pinmuxing                              */
+	/*                                        */
     	fragment@0 {
         	target = <&am33xx_pinmux>;
         	__overlay__ {
@@ -15,15 +18,46 @@
                 		pinctrl-single,pins = <
                  			0x074 0x37 /* xerr:  P9_13 = uart4_txd, INPUT_PULLUP  | MODE7 */
 	                 		0x040 0x17 /* mode:  P9_15 = gpio1_16,  OUTPUT_PULLUP | MODE7 */
-					0x150 0x17 /* blank: P9_22 = UART2_RXD, OUTPUT_PULLUP | MODE7 */
+					//0x150 0x17 /* blank: P9_22 = UART2_RXD, OUTPUT_PULLUP | MODE7 */
                 	 		0x044 0x17 /* xhalf: P9_23 = gpio1_17,  OUTPUT_PULLUP | MODE7 */
+					//0x048 0x17 /* gsclk: P9_14 = EHRPWM1A,  OUTPUT_PULLUP | MODE7 */
+             			>;
+            		};
+        	};
+    	};
+    	fragment@1 {
+        	target = <&am33xx_pinmux>;
+        	__overlay__ {
+            		tlc5946_clock_pins: pinctrl_tlc5946_clock_pins {
+                		pinctrl-single,pins = <
+                 			//0x074 0x37 /* xerr:  P9_13 = uart4_txd, INPUT_PULLUP  | MODE7 */
+	                 		//0x040 0x17 /* mode:  P9_15 = gpio1_16,  OUTPUT_PULLUP | MODE7 */
+					0x150 0x17 /* blank: P9_22 = UART2_RXD, OUTPUT_PULLUP | MODE7 */
+                	 		//0x044 0x17 /* xhalf: P9_23 = gpio1_17,  OUTPUT_PULLUP | MODE7 */
 					0x048 0x17 /* gsclk: P9_14 = EHRPWM1A,  OUTPUT_PULLUP | MODE7 */
              			>;
             		};
         	};
     	};
+    	fragment@2 {
+        	target = <&am33xx_pinmux>;
+        	__overlay__ {
+            		pinctrl_spi1: pinctrl_spi1_pins {
+                		pinctrl-single,pins = <
+                 			0x190 0x33 /* P9_31 = mcasp0_aclkx.spi1_sclk, INPUT_PULLUP | MODE3 */
+                 			0x194 0x33 /* P9_29 = mcasp0_fsx.spi1_d0, INPUT_PULLUP  | MODE3*/
+                 			0x198 0x13 /* P9_30 = mcasp0_axr0.spi1_d1, OUTPUT_PULLUP | MODE3 */
+                 			0x19c 0x13 /* P9_28 = mcasp0_ahclkr.spi1_cs0, OUTPUT_PULLUP | MODE3 */
+                 			0x164 0x12  /* P9_42 = GPIO0_7 =  eCAP0_in_PWM0_out.gpio0[7] , OUTPUT_PULLUP | MODE2 */ 
+             			>;
+            		};
+        	};
+    	};
 
-	fragment@1 {
+	/******************************************/
+	/* GPIO pins                              */
+	/*                                        */
+	fragment@20 {
 		target = <&ocp>;
 		__overlay__ {
 			#address-cells = <1>;
@@ -37,14 +71,50 @@
 		};
 	};
 
-	fragment@2 {
+	/******************************************/
+	/* Enable PRUSS                           */
+	/*                                        */
+	fragment@30 {
 		target = <&pruss>;
 		__overlay__ {
 			status = "okay";
 
 			pinctrl-names = "default";
-			/* pinctrl-0 = <&tlc5946_clock_pins>; */
+			pinctrl-0 = <&tlc5946_clock_pins>; 
+		};
+	};
+
+	/******************************************/
+	/* Enable SPI1                            */
+	/*                                        */
+	fragment@40 {
+		target = <&spi1>;
+		__overlay__ {
+			#address-cells 	= <1>;
+			#size-cells 	= <0>;
+			status			= "okay";
+			pinctrl-names	= "default";
+			pinctrl-0		= <&pinctrl_spi1>;	
+			//cs-gpios 		= <&gpio4 17 0>, <&gpio1 7 0>;
+
+			spi1_0{
+				#address-cells 	  = <1>;
+				#size-cells 	  = <0>;
+				compatible 		  = "linux,spidev";
+				reg 			  = <0>;
+				spi-max-frequency =  <16000000>;
+				spi-cpha;		  
+			};
+			spi1_1{
+				#address-cells 	  = <1>;
+				#size-cells 	  = <0>;
+				compatible 		  = "linux,spidev";
+				reg 			  = <1>;
+				spi-max-frequency =  <16000000>;
+				// Mode 0 (CPOL = 0, CPHA = 0)
+			};
 		};
 	};
 
 };
+
