Copying original Makefile into Makefile.am

--- a/dts/Makefile.am
+++ b/dts/Makefile.am
@@ -1,10 +1,13 @@
-## Process this file with automake to produce Makefile.in
-## ./dts/Makefile.am
 
-.dts.dtbo:
+
+DTS=gpio_hd44780-00A0.dts gpio_leds-00A0.dts tlc5946-00A0.dts gpio_buttons-00A0.dts spi1-00A0.dts jd-t18003-ctrl-00A0.dts
+DTBs=$(patsubst %.dts,%.dtbo,$(DTS))
+
+%.dtbo: %.dts
 	dtc -O dtb -o $@ -b 0 -@ $<
 
-firmwaredir = /lib/firmware
+all: $(DTBs)
 
-firmware_PROGRAMS = gpio_hd44780-00A0.dtbo gpio_leds-00A0.dtbo tlc5946-00A0.dtbo gpio_buttons-00A0.dtbo spi1-00A0.dtbo jd-t18003-ctrl-00A0.dtbo
+clean:
+	rm -f  $(DTBs)
 
