--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,6 @@
 DEBUG_LEVEL=0
-CPPFLAGS=-I../include/  -D_HW_PLATFORM_BEAGLEBONE -DDEBUG_LEVEL=$(DEBUG_LEVEL)
+ERROR_LEVEL=1
+CPPFLAGS=-I../include/  -D_HW_PLATFORM_BEAGLEBONE -DIOOO_DEBUG_LEVEL=$(DEBUG_LEVEL) -DIOOO_ERROR_LEVEL=$(ERROR_LEVEL)
 CXXFLAGS=-O0 -g -pedantic -Wall -std=gnu++11
 CFLAGS=-pedantic -Wall 
 CXX=${CROSS}g++ 
@@ -12,7 +13,7 @@ vpath %.h ../include
 vpath %.cpp src 
 vpath %.c src 
 
-LIB_SRC= I2C.cpp SPI.cpp GPIOoo.cpp BeagleGoo.cpp BeagleGooP.cpp HD44780.cpp HD44780gpioPhy.cpp TLC5946phy.cpp TLC5946chain.cpp TLC5946PRUSSphy.cpp JDT18003T01.cpp ST7735.cpp ST7735phy.cpp
+LIB_SRC= I2C.cpp SPI.cpp GPIOoo.cpp BeagleGoo.cpp BeagleGooP.cpp ADC.cpp NativeADC.cpp BeagleADC.cpp LTC2485.cpp HD44780.cpp HD44780gpioPhy.cpp TLC5946phy.cpp TLC5946chain.cpp TLC5946PRUSSphy.cpp JDT18003T01.cpp ST7735.cpp ST7735phy.cpp
 LIB_OBJS=$(patsubst %.cpp,%.o,$(LIB_SRC)) 
 
 ../lib/libgpiooo.a:$(LIB_OBJS)
