--- a/dts/BB-SPI0-ALT-00A0.dts
+++ b/dts/BB-SPI0-ALT-00A0.dts
@@ -1,7 +1,10 @@
 /*
  * Copyright (C) 2013 CircuitCo
  *
- * Virtual cape for SPI1 on connector pins P9.29 P9.31 P9.30 P9.28
+ * Virtual cape for SPI0 on connector pins P9.22 P9.21 P9.18 P9.17
+ *
+ * D0 = Output
+ * D1 = Input
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -14,19 +17,19 @@
 	compatible = "ti,beaglebone", "ti,beaglebone-black";
 
 	/* identification */
-	part-number = "BB-SPI1";
+	part-number = "BB-SPI0";
 	version = "00A0";
 
 	/* state the resources this cape uses */
 	exclusive-use =
 		/* the pin header uses */
-		"P9.31",	/* spi1_sclk */
-		"P9.29",	/* spi1_d0 */
-		"P9.30",	/* spi1_d1 */
-		"P9.28",	/* spi1_cs0 */
-		// "P9.42",	/* spi1_cs1 */
+		"P9.22",	/* spi0_sclk */
+		"P9.21",	/* spi0_d0 */
+		"P9.18",	/* spi0_d1 */
+		"P9.17",	/* spi0_cs0 */
+		// "P9.42",	/* spi0_cs1 */
 		/* the hardware ip uses */
-		"spi1";
+		"spi0";
 
 	fragment@0 {
 		target = <&am33xx_pinmux>;
@@ -34,10 +37,10 @@
 			/* default state has all gpios released and mode set to uart1 */
 			bb_spi1_pins: pinmux_bb_spi1_pins {
 				pinctrl-single,pins = <
-					0x190 0x33	/* mcasp0_aclkx.spi1_sclk, INPUT_PULLUP | MODE3 */
-					0x194 0x33	/* mcasp0_fsx.spi1_d0, INPUT_PULLUP | MODE3 */
-					0x198 0x13	/* mcasp0_axr0.spi1_d1, OUTPUT_PULLUP | MODE3 */
-					0x19c 0x13	/* mcasp0_ahclkr.spi1_cs0, OUTPUT_PULLUP | MODE3 */
+					0x150 0x33	/* mcasp0_aclkx.spi0_sclk, INPUT_PULLUP | MODE3 */
+					0x154 0x13	/* mcasp0_fsx.spi0_d0, OUTPUT_PULLUP | MODE3 */
+					0x158 0x33	/* mcasp0_axr0.spi0_d1, INPUT_PULLUP | MODE3 */
+					0x15c 0x13	/* mcasp0_ahclkr.spi0_cs0, OUTPUT_PULLUP | MODE3 */
 					// 0x164 0x12	/* eCAP0_in_PWM0_out.spi1_cs1 OUTPUT_PULLUP | MODE2 */
 				>;
 			};
@@ -45,7 +48,7 @@
 	};
 
 	fragment@1 {
-		target = <&spi1>;	/* spi1 is numbered correctly */
+		target = <&spi0>;	/* spi0 is numbered correctly */
 		__overlay__ {
 			status = "okay";
 			pinctrl-names = "default";
