--- a/dts/BB-SPI1-ALT-00A0.dts
+++ b/dts/BB-SPI1-ALT-00A0.dts
@@ -3,6 +3,9 @@
  *
  * Virtual cape for SPI1 on connector pins P9.29 P9.31 P9.30 P9.28
  *
+ * D0 = Output
+ * D1 = Input
+ *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
  * published by the Free Software Foundation.
