--- a/dts/BB-I2C2-00A0.dts
+++ b/dts/BB-I2C2-00A0.dts
@@ -29,9 +29,11 @@
 		target = <&am33xx_pinmux>;
 		__overlay__ {
 			bb_i2c2_pins: pinmux_bb_i2c2_pins {
+				/* see BeagleBone System Reference Manual 7.1 - Expansion Connectors */
+				/* for pinmux offsets, see Derek Molloy's tables at http://exploringbeaglebone.com/chapter8/ */
 				pinctrl-single,pins = <
-					0x178 0x72	/* i2c2_sda, SLEWCTRL_SLOW | INPUT_PULLUP | MODE2 */
-					0x17c 0x72	/* i2c2_scl, SLEWCTRL_SLOW | INPUT_PULLUP | MODE2 */
+					0x178 0x72	/* i2c2_sda, SLEWCTRL_SLOW | INPUT_PULLUP | MODE3 */
+					0x17c 0x72	/* i2c2_scl, SLEWCTRL_SLOW | INPUT_PULLUP | MODE3 */
 				>;
 			};
 		};
