--- a/dts/BB-SPI1-ALT-00A0.dts
+++ b/dts/BB-SPI1-ALT-00A0.dts
@@ -1,7 +1,7 @@
 /*
  * Copyright (C) 2013 CircuitCo
  *
- * Virtual cape for SPI1 on connector pins P9.29 P9.31 P9.30 P9.28
+ * Virtual cape for SPI1 on connector pins P9.28 P9.29 P9.30 P9.31
  *
  * D0 = Output
  * D1 = Input
@@ -23,25 +23,26 @@
 	/* state the resources this cape uses */
 	exclusive-use =
 		/* the pin header uses */
-		"P9.31",	/* spi1_sclk */
+		"P9.28",	/* spi1_cs0 */
 		"P9.29",	/* spi1_d0 */
 		"P9.30",	/* spi1_d1 */
-		"P9.28",	/* spi1_cs0 */
-		// "P9.42",	/* spi1_cs1 */
+		"P9.31",	/* spi1_sclk */
+		"P9.42",	/* spi1_cs1 */
 		/* the hardware ip uses */
 		"spi1";
 
 	fragment@0 {
 		target = <&am33xx_pinmux>;
 		__overlay__ {
-			/* default state has all gpios released and mode set to uart1 */
 			bb_spi1_pins: pinmux_bb_spi1_pins {
+				/* see BeagleBone System Reference Manual 7.1 - Expansion Connectors */
+				/* for pinmux offsets, see Derek Molloy's tables at http://exploringbeaglebone.com/chapter8/ */
 				pinctrl-single,pins = <
-					0x190 0x33	/* mcasp0_aclkx.spi1_sclk, INPUT_PULLUP | MODE3 */
-					0x194 0x13	/* mcasp0_fsx.spi1_d0, OUTPUT_PULLUP | MODE3 */
-					0x198 0x33	/* mcasp0_axr0.spi1_d1, INPUT_PULLUP | MODE3 */
-					0x19c 0x13	/* mcasp0_ahclkr.spi1_cs0, OUTPUT_PULLUP | MODE3 */
-					// 0x164 0x12	/* eCAP0_in_PWM0_out.spi1_cs1 OUTPUT_PULLUP | MODE2 */
+					0x19c 0x13	/* spi1_cs0, OUTPUT_PULLUP | MODE3 */
+					0x194 0x13	/* spi1_d0, OUTPUT_PULLUP | MODE3 */
+					0x198 0x33	/* spi1_d1, INPUT_PULLUP | MODE3 */
+					0x190 0x33	/* spi1_sclk, INPUT_PULLUP | MODE3 */
+					0x164 0x14	/* i2c2_scl.spi1_cs1 OUTPUT_PULLUP | MODE4 */
 				>;
 			};
 		};
