--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -125,10 +125,12 @@ am__v_AR_1 =
 libgpiooo_a_AR = $(AR) $(ARFLAGS)
 libgpiooo_a_LIBADD =
 am_libgpiooo_a_OBJECTS = I2C.$(OBJEXT) SPI.$(OBJEXT) GPIOoo.$(OBJEXT) \
-	BeagleGoo.$(OBJEXT) BeagleGooP.$(OBJEXT) HD44780.$(OBJEXT) \
-	HD44780gpioPhy.$(OBJEXT) TLC5946phy.$(OBJEXT) \
-	TLC5946chain.$(OBJEXT) TLC5946PRUSSphy.$(OBJEXT) \
-	JDT18003T01.$(OBJEXT) ST7735.$(OBJEXT) ST7735phy.$(OBJEXT)
+	BeagleGoo.$(OBJEXT) BeagleGooP.$(OBJEXT) ADC.$(OBJEXT) \
+	NativeADC.$(OBJEXT) BeagleADC.$(OBJEXT) LTC248X.$(OBJEXT) \
+	HD44780.$(OBJEXT) HD44780gpioPhy.$(OBJEXT) \
+	TLC5946phy.$(OBJEXT) TLC5946chain.$(OBJEXT) \
+	TLC5946PRUSSphy.$(OBJEXT) JDT18003T01.$(OBJEXT) \
+	ST7735.$(OBJEXT) ST7735phy.$(OBJEXT)
 libgpiooo_a_OBJECTS = $(am_libgpiooo_a_OBJECTS)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
@@ -286,7 +288,7 @@ AM_CPPFLAGS = -I${top_srcdir}/include/  -D_HW_PLATFORM_BEAGLEBONE -DDEBUG_LEVEL=
 AM_LDFLAGS = -Llib
 AM_ARFLAGS = rvs
 lib_LIBRARIES = libgpiooo.a
-libgpiooo_a_SOURCES = I2C.cpp SPI.cpp GPIOoo.cpp BeagleGoo.cpp BeagleGooP.cpp HD44780.cpp HD44780gpioPhy.cpp TLC5946phy.cpp TLC5946chain.cpp TLC5946PRUSSphy.cpp JDT18003T01.cpp ST7735.cpp ST7735phy.cpp
+libgpiooo_a_SOURCES = I2C.cpp SPI.cpp GPIOoo.cpp BeagleGoo.cpp BeagleGooP.cpp ADC.cpp NativeADC.cpp BeagleADC.cpp LTC248X.cpp HD44780.cpp HD44780gpioPhy.cpp TLC5946phy.cpp TLC5946chain.cpp TLC5946PRUSSphy.cpp JDT18003T01.cpp ST7735.cpp ST7735phy.cpp
 all: all-am
 
 .SUFFIXES:
@@ -364,6 +366,8 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ADC.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/BeagleADC.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/BeagleGoo.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/BeagleGooP.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/GPIOoo.Po@am__quote@
@@ -371,6 +375,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/HD44780gpioPhy.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/I2C.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/JDT18003T01.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/LTC248X.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/NativeADC.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/SPI.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ST7735.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ST7735phy.Po@am__quote@
