Build was failing because dts/Makefile.am had not been updated for new files. Fixed.

--- a/dts/Makefile.in
+++ b/dts/Makefile.in
@@ -202,7 +202,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-DTS = gpio_hd44780-00A0.dts gpio_leds-00A0.dts tlc5946-00A0.dts gpio_buttons-00A0.dts spi1-00A0.dts jd-t18003-ctrl-00A0.dts
+DTS = BB-ADC-00A0.dts BB-I2C2-00A0.dts BB-SPI0-ALT-00A0.dts BB-SPI1-ALT-00A0.dts gpio_buttons-00A0.dts   gpio_hd44780-00A0.dts gpio_leds-00A0.dts tlc5946-00A0.dts BB-I2C1-00A0.dts BB-SPI0-00A0.dts  BB-SPI1-00A0.dts jd-t18003-ctrl-00A0.dts
 DTBs = $(patsubst %.dts,%.dtbo,$(DTS))
 all: all-am
 
