--- a/include/Makefile
+++ b/include/Makefile
@@ -159,22 +159,24 @@ DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 ACLOCAL = aclocal-1.14
 AMTAR = $${TAR-tar}
 AM_DEFAULT_VERBOSITY = 1
-AR = ar
+AR = arm-linux-gnueabihf-ar
 AUTOCONF = autoconf
 AUTOHEADER = autoheader
 AUTOMAKE = automake-1.14
 AWK = mawk
-CC = gcc
+CC = arm-linux-gnueabihf-gcc
 CCDEPMODE = depmode=gcc3
-CFLAGS = -g -O2
+CFLAGS = -march=armv7-a -mtune=cortex-a8
 CPPFLAGS = 
-CXX = g++
-CXXCPP = g++ -E
+CXX = arm-linux-gnueabihf-g++
+CXXCPP = arm-linux-gnueabihf-g++ -E
 CXXDEPMODE = depmode=gcc3
-CXXFLAGS = -g -O2 -std=gnu++11
+CXXFLAGS = -march=armv7-a -mtune=cortex-a8 -std=gnu++11
 CYGPATH_W = echo
+DEBUG_LEVEL = 0
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
+DTC = /home/chris/workspace/ibm-gas-sensor/third-party/dtc/dtc
 ECHO_C = 
 ECHO_N = -n
 ECHO_T = 
@@ -202,18 +204,18 @@ PACKAGE_TARNAME = iooo
 PACKAGE_URL = 
 PACKAGE_VERSION = 0.1
 PATH_SEPARATOR = :
-RANLIB = ranlib
+RANLIB = arm-linux-gnueabihf-ranlib
 SET_MAKE = 
 SHELL = /bin/bash
-STRIP = 
+STRIP = arm-linux-gnueabihf-strip
 VERSION = 0.1
-abs_builddir = /media/sf_RBM/IOoo/include
-abs_srcdir = /media/sf_RBM/IOoo/include
-abs_top_builddir = /media/sf_RBM/IOoo
-abs_top_srcdir = /media/sf_RBM/IOoo
-ac_ct_AR = ar
-ac_ct_CC = gcc
-ac_ct_CXX = g++
+abs_builddir = /home/chris/workspace/ibm-gas-sensor/third-party/iooo/include
+abs_srcdir = /home/chris/workspace/ibm-gas-sensor/third-party/iooo/include
+abs_top_builddir = /home/chris/workspace/ibm-gas-sensor/third-party/iooo
+abs_top_srcdir = /home/chris/workspace/ibm-gas-sensor/third-party/iooo
+ac_ct_AR = 
+ac_ct_CC = 
+ac_ct_CXX = 
 am__include = include
 am__leading_dot = .
 am__quote = 
@@ -227,11 +229,11 @@ datarootdir = ${prefix}/share
 docdir = ${datarootdir}/doc/${PACKAGE_TARNAME}
 dvidir = ${docdir}
 exec_prefix = ${prefix}
-host_alias = 
+host_alias = arm-linux-gnueabihf
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /root/install-sh
+install_sh = ${SHELL} /home/chris/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
