--- a/dts/Makefile.am
+++ b/dts/Makefile.am
@@ -1,13 +1,13 @@
+DTC=@DTC@
 
-
-DTS=gpio_hd44780-00A0.dts gpio_leds-00A0.dts tlc5946-00A0.dts gpio_buttons-00A0.dts spi1-00A0.dts jd-t18003-ctrl-00A0.dts
-DTBs=$(patsubst %.dts,%.dtbo,$(DTS))
+DTS=gpio_hd44780-00A0.dts gpio_leds-00A0.dts tlc5946-00A0.dts gpio_buttons-00A0.dts jd-t18003-ctrl-00A0.dts
+DTS+=BB-ADC-00A0.dts BB-I2C1-00A0.dts BB-I2C2-00A0.dts BB-SPI0-00A0.dts BB-SPI0-ALT-00A0.dts BB-SPI1-00A0.dts BB-SPI1-ALT-00A0.dts
+DTBs=$(subst .dts,.dtbo,$(DTS))
 
 %.dtbo: %.dts
-	dtc -O dtb -o $@ -b 0 -@ $<
+	$(DTC) -O dtb -o $@ -b 0 -@ $<
 
 all: $(DTBs)
 
-clean:
-	rm -f  $(DTBs)
-
+clean-local:
+	-rm -f *.dtbo
