--- a/dts/Makefile.in
+++ b/dts/Makefile.in
@@ -124,8 +124,10 @@ CXXCPP = @CXXCPP@
 CXXDEPMODE = @CXXDEPMODE@
 CXXFLAGS = @CXXFLAGS@
 CYGPATH_W = @CYGPATH_W@
+DEBUG_LEVEL = @DEBUG_LEVEL@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
+DTC = @DTC@
 ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
@@ -202,8 +204,11 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-DTS = gpio_hd44780-00A0.dts gpio_leds-00A0.dts tlc5946-00A0.dts gpio_buttons-00A0.dts spi1-00A0.dts jd-t18003-ctrl-00A0.dts
-DTBs = $(patsubst %.dts,%.dtbo,$(DTS))
+DTS = gpio_hd44780-00A0.dts gpio_leds-00A0.dts tlc5946-00A0.dts \
+	gpio_buttons-00A0.dts jd-t18003-ctrl-00A0.dts BB-ADC-00A0.dts \
+	BB-I2C1-00A0.dts BB-I2C2-00A0.dts BB-SPI0-00A0.dts \
+	BB-SPI0-ALT-00A0.dts BB-SPI1-00A0.dts BB-SPI1-ALT-00A0.dts
+DTBs = $(subst .dts,.dtbo,$(DTS))
 all: all-am
 
 .SUFFIXES:
@@ -308,7 +313,9 @@ distclean-generic:
 maintainer-clean-generic:
 	@echo "This command is intended for maintainers to use"
 	@echo "it deletes files that may require special tools to rebuild."
-clean-am: clean-generic mostlyclean-am
+clean: clean-am
+
+clean-am: clean-generic clean-local mostlyclean-am
 
 distclean: distclean-am
 	-rm -f Makefile
@@ -374,25 +381,25 @@ uninstall-am:
 
 .MAKE: install-am install-strip
 
-.PHONY: all all-am check check-am clean clean-generic cscopelist-am \
-	ctags-am distclean distclean-generic distdir dvi dvi-am html \
-	html-am info info-am install install-am install-data \
-	install-data-am install-dvi install-dvi-am install-exec \
-	install-exec-am install-html install-html-am install-info \
-	install-info-am install-man install-pdf install-pdf-am \
-	install-ps install-ps-am install-strip installcheck \
-	installcheck-am installdirs maintainer-clean \
+.PHONY: all all-am check check-am clean clean-generic clean-local \
+	cscopelist-am ctags-am distclean distclean-generic distdir dvi \
+	dvi-am html html-am info info-am install install-am \
+	install-data install-data-am install-dvi install-dvi-am \
+	install-exec install-exec-am install-html install-html-am \
+	install-info install-info-am install-man install-pdf \
+	install-pdf-am install-ps install-ps-am install-strip \
+	installcheck installcheck-am installdirs maintainer-clean \
 	maintainer-clean-generic mostlyclean mostlyclean-generic pdf \
 	pdf-am ps ps-am tags-am uninstall uninstall-am
 
 
 %.dtbo: %.dts
-	dtc -O dtb -o $@ -b 0 -@ $<
+	$(DTC) -O dtb -o $@ -b 0 -@ $<
 
 all: $(DTBs)
 
-clean:
-	rm -f  $(DTBs)
+clean-local:
+	-rm -f *.dtbo
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
