--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,7 +2,7 @@
 ## ./src/Makefile.am
 
 DEBUG_LEVEL=@DEBUG_LEVEL@
-AM_CPPFLAGS=-I${top_srcdir}/include/ -D_HW_PLATFORM_BEAGLEBONE -DDEBUG_LEVEL=$(DEBUG_LEVEL)
+AM_CPPFLAGS=-I${top_srcdir}/include/ -D_HW_PLATFORM_BEAGLEBONE -DIOOO_DEBUG_LEVEL=$(DEBUG_LEVEL)
 AM_LDFLAGS=-Llib
 AM_ARFLAGS=rvs
 
