--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,9 @@
 ## Process this file with automake to produce Makefile.in
 ## ./Makefile.am
 
-SUBDIRS = src examples dts include
+ACLOCAL_AMFLAGS=-I m4
+
+SUBDIRS = lib src examples dts include
 
 ## Include the library headers
 # AM_CPPFLAGS = "-Iinclude/"
