Remove PRUSS sources from project\nIt's now the builder's responsibility to include the necessary libraries in order to optionally build TLC5946PRUSSphy.cpp

--- a/config.h.in
+++ b/config.h.in
@@ -27,6 +27,12 @@
 /* Define to 1 if you have the `munmap' function. */
 #undef HAVE_MUNMAP
 
+/* Define to 1 if you have the <prussdrv.h> header file. */
+#undef HAVE_PRUSSDRV_H
+
+/* Define to 1 if you have the <pruss_intc_mapping.h> header file. */
+#undef HAVE_PRUSS_INTC_MAPPING_H
+
 /* Define to 1 if you have the <stdint.h> header file. */
 #undef HAVE_STDINT_H
 
