--- a/include/Makefile.in
+++ b/include/Makefile.in
@@ -285,7 +285,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-nobase_include_HEADERS = beaglebone/BeagleGoo.h beaglebone/BeagleGooP.h device/HD44780.h device/HD44780gpioPhy.h device/HD44780phy.h device/JDT18003T01.h device/ST7735.h device/ST7735phy.h device/TLC5946PRUSSphy.h device/TLC5946chain.h device/TLC5946phy.h pruss/pruss_intc_mapping.h pruss/prussdrv.h
+nobase_include_HEADERS = beaglebone/BeagleGoo.h beaglebone/BeagleGooP.h device/HD44780.h device/HD44780gpioPhy.h device/HD44780phy.h device/JDT18003T01.h device/ST7735.h device/ST7735phy.h device/TLC5946PRUSSphy.h device/TLC5946chain.h device/TLC5946phy.h
 all: all-am
 
 .SUFFIXES:
