--- a/Makefile.in
+++ b/Makefile.in
@@ -320,7 +320,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 ACLOCAL_AMFLAGS = -I m4
-SUBDIRS = lib src examples dts include
+SUBDIRS = src examples dts include
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
